fixtures/metadata-resolve/failing/model_permissions/unknown_model/resolve_error.expected
Error: unknown model used in model select permissions definition: Albums (in subgraph subgraphs)
    ╭─[ <unknown>:11:26 ]
    │
 11 │             "modelName": "Albums",
    │                          ────┬───  
    │                              ╰───── This model is not defined
────╯
